<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/hi_welcome_"
        android:layout_width="159dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/hi_welcome"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center_vertical" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hi_welcome_"
        android:layout_margin="24dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="24sp"
                android:fontFamily="@font/berkshire_swash"/>

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#000"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"/>

            <com.example.capstone.ValidatingEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.example.capstone.ValidatingEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/passwordVisibilityToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:src="@drawable/ic_visibility_off_24" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:backgroundTint="#43B0C7"
                android:text="@string/button_register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/have_account"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
