<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorBackground">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="-80dp"
        android:src="@drawable/gambar_skincare" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/berkshire_swash"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#000"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="20sp"
                android:backgroundTint="#000"
                android:padding="12dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:backgroundTint="#000"
                android:padding="12dp"
                android:layout_marginBottom="40dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:backgroundTint="#43B0C7"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="4dp" />
</LinearLayout>

